# niri-switch

./: .gitignore  Cargo.toml  PKGBUILD  README.md  build.rs  default.nix  flake.nix
.github/workflows/: rust.yml
nix/: default.nix
src/: connection.rs  main.rs
src/client/: main.rs
src/daemon/: dbus.rs  main.rs  niri_socket.rs
src/daemon/gui/: mod.rs  resources.gresource.xml  store.rs  style.css  style.rs  window_list.rs
src/daemon/gui/store/: app_database.rs  mod.rs  window_cache.rs
src/daemon/gui/window_info/: imp.rs  mod.rs
src/daemon/gui/window_item/: imp.rs  mod.rs  window_item.ui
src/daemon/gui/window_list/: imp.rs  mod.rs  window_list.ui
src/daemon/gui/window_list/window_info/: imp.rs  mod.rs
src/daemon/gui/window_list/window_item/: imp.rs  mod.rs  window_item.ui
src/gui/: mod.rs  style.css  window_info.rs
