[package]
name = "niri-switch"
version = "0.1.0"
edition = "2024"

[dependencies]
niri-ipc = "25.5.1"
gtk4-layer-shell = "0.5.0"
gtk4 = { version = "0.9.7", features = ["v4_12"] }
gdk4 = "0.9.6"
gio = "0.20.12"
glib = "0.20.12"
clap = { version = "4.0", features = ["derive"] }
nix = { version = "0.30.1", features = ["fs"] }
zbus = "5.9.0"
async-channel = "2.5.0"

[[bin]]
name = "niri-switch-daemon"
path = "src/daemon/main.rs"
